fix(ffe-accordion): use `break-all` to wrap words

--- a/packages/ffe-accordion/less/accordion.less
+++ b/packages/ffe-accordion/less/accordion.less
@@ -18,7 +18,7 @@
 
     &__heading,
     &__body {
-        word-break: break-word;
+        word-break: break-all;
         hyphens: auto;
     }
 
